# ctxvsrag

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example_large_questions.txt  example_questions.txt
src/ctxvsrag/: chunking.py  cli.py  judge.py  pdf_utils.py  rag_index.py  report.py
src/ctxvsrag/approaches/: __init__.py  full_context.py  rag_answer.py
src/ctxvsrag/backends/: __init__.py  base.py  ollama_backend.py  openai_compat_backend.py
tests/: conftest.py  test_backends_base.py  test_backends_factory.py  test_chunking.py  test_cli.py  test_full_context.py  test_judge.py  test_pdf_utils.py  test_rag_answer.py  test_rag_index.py  test_report.py
