[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctxvsrag"
version = "0.2.0"
description = "Benchmark full-context-in-prompt vs. RAG for a document, against Ollama, vLLM, LiteLLM, Open WebUI, or any OpenAI-compatible backend"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Dominic Neuburg", email = "dominic@done-work.com" },
]
dependencies = [
    "ollama>=0.4.0",
    "openai>=1.50.0",
    "pypdf>=4.0.0",
    "numpy>=1.26.0",
    "reportlab>=4.0.0",
    "matplotlib>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/donework/ctxvsrag"
Repository = "https://github.com/donework/ctxvsrag"
Issues = "https://github.com/donework/ctxvsrag/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
ctxvsrag = "ctxvsrag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ctxvsrag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
